Implement button back in views Main and Secondary with intent

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -11,4 +11,5 @@
     <string name="seleccion_moneda" translatable="false">Select Currency</string>
     <string name="hint_select" translatable="false">Enter Amount in ARS</string>
     <string name="resultado">Result</string>
-   </resources>
+    <string name="volver" translatable="false">Back</string>
+</resources>
